[package]
name = "itm-decode"
version = "0.4.0-alpha.1"
authors = [
        "Viktor Sonesten <v@tmplt.dev>",
]
edition = "2018"
readme = "README.md"
repository = "https://github.com/rtic-scope/itm-decode"
license = "MIT OR Apache-2.0"
description = "A library for decoding ARM Cortex-m ITM and DWT packets"
homepage = "https://github.com/rtic-scope/itm-decode"

[dependencies]
bitmatch = "0.1.1"
bitvec = "0.22"
cortex-m = { version = "0.6", default-features = false }
thiserror = "1"

# only required by itm-decode executable
anyhow = { version = "1.0", optional = true }
structopt = { version = "0.3", optional = true }

[dependencies.serde_crate]
package = "serde"
version = "1"
features = [ "derive" ]
optional = true

[features]
bin = [ "anyhow", "structopt" ]
serde = [ "serde_crate" ]
default = [ "bin" ]

[lib]
name = "itm_decode"

[[bin]]
name = "itm-decode"
