[package]
name = "itm"
version = "0.4.0"
keywords = ["parse", "ARM", "ITM"]
documentation = "https://docs.rs/itm"
authors = [
        "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
        "Viktor Sonesten <v@tmplt.dev>",
]
edition = "2018"
readme = "README.md"
repository = "https://github.com/embedded-rust/itm"
license = "MIT OR Apache-2.0"
description = "A decoding library and tool for the ARM Cortex-M ITM/DWT packet protocol"
homepage = "https://github.com/embedded-rust/itm"

[dependencies]
bitmatch = "0.1.1"
bitvec = "0.22"
thiserror = "1"
chrono = "0.4"

# only required by itm-decode executable
anyhow = { version = "1.0", optional = true }
structopt = { version = "0.3", optional = true }

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[dependencies.cortex-m]
version = "0.7"
git = "https://github.com/rtic-scope/cortex-m"
branch = "itm-rewrite"
features = ["serde"]


[features]
bin = [ "anyhow", "structopt" ]
default = [ "bin" ]

[lib]
name = "itm"

[[bin]]
name = "itm-decode"
