[package]
name = "itm"
version = "0.4.0"
keywords = ["parse", "ARM", "ITM"]
documentation = "https://docs.rs/itm"
authors = [
        "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
        "Viktor Sonesten <v@tmplt.dev>",
]
edition = "2018"
readme = "README.md"
repository = "https://github.com/rtic-scope/itm"
license = "MIT OR Apache-2.0"
description = "A decoding library for the ARM Cortex-M ITM/DWT packet protocol"

[dependencies]
bitmatch = "0.1.1"
bitvec = "0.22"
thiserror = "1"

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[dependencies.cortex-m]
version = "0.7"
git = "https://github.com/rust-embedded/cortex-m"
features = ["serde"]
